# memmap-rs

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md
.github/workflows/: main.yml
ci/: run-travis.sh  run.sh  script.sh
examples/: cat.rs
src/: lib.rs  mmap_sliver.rs  posix.rs  unix.rs  windows.rs
