[package]
name = "memmap"
version = "0.2.1"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/danburkert/memmap-rs"
documentation = "https://danburkert.github.io/memmap-rs/memmap/index.html"
description = "Cross-platform Rust API for memory-mapped file IO"
keywords = ["mmap", "memory-map", "io", "file"]
exclude = [
  ".appveyor.yml",
  ".gitignore",
  ".travis.yml",
]

[dependencies]
fs2 = "0.2.0"
kernel32-sys = "0.1.4"
libc = "0.2.1"
winapi = "0.2.4"

[dev-dependencies]
tempdir = "0.3.4"
